--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .sidebar{
     width: 291px;
-    height: 2678px;
+    height: 100vh;
     left: 0px;
     top: 0px;
     color:white;
@@ -20,14 +20,19 @@
 .sidebar ul{
     margin-top: 40vh;
 }
-.sidebar ul li a {
+.sidebar ul li  {
 
    padding: 20px;
     display: flex;
     list-style: none;
     justify-content: center;
+    
+}
+.sidebar a{
+    color: white;
     text-decoration: none;
 }
+
 .greeting{
     display: flex;
     position: relative;
@@ -38,6 +43,29 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
+}
+
+.search-bar #search{
+    box-sizing: border-box;
+
+position: absolute;
+width: 464px;
+height: 37px;
+left: 331px;
+top: 50px;
+
+background: #FFFFFF;
+border: 1px solid #CCCCCC;
+border-radius: 20px;
+
+}
+
+.search-button{
+    position: absolute;
+width: 35px;
+height: 45px;
+left: 747px;
+top: 46px;
 }
 
 
