--- a/style.css
+++ b/style.css
@@ -93,4 +93,59 @@ font-size: 24px;
 line-height: 36px;
 }
 
+.nepse-card{
+position: absolute;
+width: 767px;
+height: 252px;
+left: 320px;
+top: 176px;
+display: flex;
+align-items: center;
+background: #FFFFFF;
+box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
+border-radius: 10px;
+}
+.nepse-stat{
+    position: relative;
+    left: 10px;
+}
+ .time-date{
+    left: 390px;
+    top: 260px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+}
+.nepse-point-text{
+width: 128px;
+height: 30px;
+left: 363px;
+top: 272px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 30px;
+}
+.nepse-point-number{
+    width: 144px;
+height: 54px;
+left: 363px;
+top: 340px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 36px;
+line-height: 54px;
+}
+
+
+
+
+
+
+
 
