--- a/style.css
+++ b/style.css
@@ -3,163 +3,65 @@
     margin:0;
     padding: 0;
 }
-.sidebar{
-    position: relative;
-    width: 291px;
+
+.sidebar {
+    width: 20%;
     height: 100vh;
     left: 0px;
     top: 0px;
-    color:white;
+    color: white;
     background: #1C8B98;
-    position: fixed ;
+    position: fixed;
     display: flex;
     justify-content: center;
-    align-items:normal
-    
-     
+    align-items: normal
 }
-.sidebar .logo-container img{
+
+.sidebar .logo-container img {
     position: absolute;
-width: 232px;
-height: 62.1px;
-left: 33px;
-top: 41.4px;
-
-background: #FFFFFF;
-border-radius: 15px;
-object-fit:contain;
+    width: 15vw;
+    height: 62.1px;
+    left: 33px;
+    top: 41.4px;
+    background: #FFFFFF;
+    border-radius: 15px;
+    object-fit: contain;
 }
 
-.sidebar ul{
+.sidebar ul {
     margin-top: 40vh;
 }
-.sidebar ul li  {
 
-   padding: 20px;
+.sidebar ul li {
+
+    padding: 20px;
     display: flex;
     list-style: none;
     justify-content: center;
-    
+
 }
-.sidebar a{
+
+.sidebar a {
     color: white;
     text-decoration: none;
 }
 
-.greeting{
-    display: flex;
+.main-body {
+    width: 80%;
+}
+
+.main-body .barChart {
     position: relative;
-    float:right;
-    margin-right: 10px;
-    top:10px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-#search {
-box-sizing: border-box;
-position: absolute;
-width: 464px;
-height: 37px;
-left: 335px;
-top: 50px;
-background: #FFFFFF;
-border: 1px solid #CCCCCC;
-border-radius: 10px;
-outline:none!important;
-
-}
-
-.search-button{
-position: absolute;
-width: 35px;
-height: 45px;
-left: 747px;
-top: 46px;
-}
-
-.header-text h3{
-    position: absolute;
-    width: 242px;
-height: 36px;
-left: 363px;
-top: 139px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 24px;
-line-height: 36px;
-}
-
-.nepse-card{
-position: absolute;
-width: 767px;
-height: 252px;
-left: 320px;
-top: 176px;
-display: flex;
-align-items: center;
-background: #FFFFFF;
-box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
-border-radius: 10px;
-}
-.nepse-stat{
-    position: relative;
-    left: 10px;
-}
- .time-date{
-    left: 390px;
-    top: 260px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-}
-.nepse-point-text{
-width: 128px;
-height: 30px;
-left: 363px;
-top: 272px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-line-height: 30px;
-}
-.nepse-point-number{
-    width: 144px;
-height: 54px;
-left: 363px;
-top: 340px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 36px;
-line-height: 54px;
-}
-
-
-
-
-
-
-
-
-.barChart {
-    position: relative;
-    margin-left: 20%;
-    padding-right: 20%;
-    padding-left: 10%;
-    padding-top: 100px;
+    margin-left: 25%;
+    width: 60vw;
+    margin-top: 20px;
+    padding-left: 5%;
     line-height: 40px;
+    box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
 }
 
-.barChart .bar {
+.main-body .barChart .bar {
     max-width: 100vh;
 
 }
@@ -168,18 +70,58 @@ p {
     font-size: 2em;
 }
 
-.suggestion {
+.main-body .suggestion {
     position: absolute;
-    margin-left: 20%;
-    padding-left: 10%;
+    margin-left: 25%;
+    width: 65vw;
+    margin-top: 5px;
+    padding-left: 0%;
     padding-top: 50px;
     text-align: center;
 }
 
-.suggestion .board {
+
+.suggestion .board1 {
     position: relative;
-    width: 25vh;
+    width: 20%;
     float: left;
+    margin-right: 5%;
     padding-bottom: 10px;
-    padding-right: 5px;
+    padding-top: 10px;
+    box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
+}
+
+.suggestion .board2 {
+    position: relative;
+    width: 20%;
+    float: left;
+    margin-left: 17px;
+    margin-right: 5%;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
+}
+
+.suggestion .board3 {
+    position: relative;
+    width: 20%;
+    float: left;
+    margin-right: 4%;
+    margin-left: 17px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
+}
+
+.suggestion .board4 {
+    position: relative;
+    width: 20%;
+    float: right;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
 }
