--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+*{
     font-family: 'Poppins';
-    margin: 0;
+    margin:0;
     padding: 0;
 }
 
@@ -46,9 +46,9 @@
     text-decoration: none;
 }
 
-/* .main-body: {
+.main-body {
     width: 80%;
-} */
+}
 
 .main-body .barChart {
     position: relative;
@@ -62,7 +62,8 @@
 }
 
 .main-body .barChart .bar {
-    width: 120vh;
+    max-width: 100vh;
+
 }
 
 p {
@@ -123,17 +124,4 @@ p {
     padding-top: 10px;
     box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
     border-radius: 10px;
-}
-
-.mktTrend {
-    margin-top: 350px;
-    margin-bottom: 20px;
-    margin-left: 25%;
-    width: 65vw;
-    box-shadow: 0px 4px 58px rgba(0, 0, 0, 0.07);
-    border-radius: 10px;
-}
-
-.mktTrend .chart {
-    width: 130vh;   
 }
